# backend-template

./: .env  Cargo.toml  LICENSE  README.md
src/: config.rs  logger.rs  main.rs
src/handlers/: home.rs  mod.rs
