[package]
name = "aca-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
config = "0.14.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
flexi_logger = "0.29.7"
log = "0.4.22"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = "1.42.0"
